src/objects/User.object
<CustomObject>
    <fields>
        <fullName>User_Cost_Center__c</fullName>
        <label>User Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Department__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1616 - TRC Admin</fullName>
                </value>
                <value>
                    <fullName>1650 - MCP</fullName>
                </value>
                <value>
                    <fullName>1666 - IT</fullName>
                </value>
                <value>
                    <fullName>1704 - Paul Rampaart</fullName>
                </value>
                <value>
                    <fullName>1730 - Barry Naegele/Jack Ranalli/Jim Redmon/Peter Zafonte/Tom Edwards (MCP)</fullName>
                </value>
                <value>
                    <fullName>1731 - Jim Harding</fullName>
                </value>
                <value>
                    <fullName>1992 - TRC Controls</fullName>
                </value>
                <value>
                    <fullName>1994 - Controls Product Management</fullName>
                </value>
                <value>
                    <fullName>2101 - Chile</fullName>
                </value>
                <value>
                    <fullName>2101 - Colombia</fullName>
                </value>
                <value>
                    <fullName>2101 - DALA</fullName>
                </value>
                <value>
                    <fullName>2101 - IT</fullName>
                </value>
                <value>
                    <fullName>2101 - Mexico</fullName>
                </value>
                <value>
                    <fullName>2101 - Peru</fullName>
                </value>
                <value>
                    <fullName>2101 - Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>2148 - Dorothy Brede/Joanne Lawson/Nancy Mundale (Credit)</fullName>
                </value>
                <value>
                    <fullName>2168 - Kathy Lecy</fullName>
                </value>
                <value>
                    <fullName>2273 - Parts</fullName>
                </value>
                <value>
                    <fullName>2384 - Quality</fullName>
                </value>
                <value>
                    <fullName>2677 - Solutions/MCP (no longer used)</fullName>
                </value>
                <value>
                    <fullName>2759 - Service</fullName>
                </value>
                <value>
                    <fullName>275B - Mark Faucher/Bob Grossman/Gordon Wilkinson/Hideka Nakane</fullName>
                </value>
                <value>
                    <fullName>3184 - WAR AAH</fullName>
                </value>
                <value>
                    <fullName>3185 - TRC AAH</fullName>
                </value>
                <value>
                    <fullName>3555 - WAR Chillers</fullName>
                </value>
                <value>
                    <fullName>3560 - TRC Chillers</fullName>
                </value>
                <value>
                    <fullName>3561 - Chiller Applications</fullName>
                </value>
                <value>
                    <fullName>3562 - Chiller Applications - PDC</fullName>
                </value>
                <value>
                    <fullName>3564 - Chiller Applications - Centrif</fullName>
                </value>
                <value>
                    <fullName>3717 - Joyce Drinnin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Department__c</fullName>
        <label>User Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Division__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAH</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>Central Mexico</fullName>
                </value>
                <value>
                    <fullName>Central Mexico - Bajio</fullName>
                </value>
                <value>
                    <fullName>Central Mexico - Guadalajara</fullName>
                </value>
                <value>
                    <fullName>Central Mexico - Mexico City</fullName>
                </value>
                <value>
                    <fullName>Chiller Applications</fullName>
                </value>
                <value>
                    <fullName>Chillers</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>DAAL</fullName>
                </value>
                <value>
                    <fullName>DAAL - Equipment Sales</fullName>
                </value>
                <value>
                    <fullName>DAFL</fullName>
                </value>
                <value>
                    <fullName>DAFL - Equipment Sales</fullName>
                </value>
                <value>
                    <fullName>DAGA</fullName>
                </value>
                <value>
                    <fullName>DAGA - Equipment Sales</fullName>
                </value>
                <value>
                    <fullName>Daikin Latin America</fullName>
                </value>
                <value>
                    <fullName>DALA</fullName>
                </value>
                <value>
                    <fullName>DALA - Andean Pact</fullName>
                </value>
                <value>
                    <fullName>DALA - Caribbean</fullName>
                </value>
                <value>
                    <fullName>DALA - Central America</fullName>
                </value>
                <value>
                    <fullName>DALA - Service</fullName>
                </value>
                <value>
                    <fullName>DANY</fullName>
                </value>
                <value>
                    <fullName>DANY - Consulting Sales</fullName>
                </value>
                <value>
                    <fullName>DANY - Equipment Sales</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>MCP</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Division__c</fullName>
        <label>User Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America - Owner Sales</fullName>
                </value>
                <value>
                    <fullName>North America - TRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Focus__c</fullName>
        <label>User Focus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Title__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>Turn Key</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>Id = $User.Id</formula>
        <label>User ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Title__c</fullName>
        <description>User Title used for Service</description>
        <inlineHelpText>This field is what is displayed on the Cover Page for Proposal documents for Service Sales</inlineHelpText>
        <label>User Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Business Development Manager</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>District Service Manager</fullName>
                </value>
                <value>
                    <fullName>Finance/Accounting</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Marketing Engineer</fullName>
                </value>
                <value>
                    <fullName>National Account Manager</fullName>
                </value>
                <value>
                    <fullName>Project Engineer</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Regional General Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Owner Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Service Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Coordinator</fullName>
                </value>
                <value>
                    <fullName>Service Center Manager</fullName>
                </value>
                <value>
                    <fullName>Service Coordinator</fullName>
                </value>
                <value>
                    <fullName>Service Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Service Sales Tech</fullName>
                </value>
                <value>
                    <fullName>Tech Supervisor</fullName>
                </value>
                <value>
                    <fullName>Vice-President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VP_Owner_Sales__c</fullName>
        <label>VP Owner Sales</label>
        <relationshipName>VP_Owner_Sales2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>User_Division__c</columns>
        <columns>User_Department__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>Is_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users_New_User_Fields</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>User_Division__c</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>User_Department__c</columns>
        <columns>User_Cost_Center__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>User_Title__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users - New User Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Direct_Sales_Office_Users</fullName>
        <booleanFilter>(1 OR 3 OR 4 OR 5) AND 2</booleanFilter>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>contains</operation>
            <value>DMNY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>contains</operation>
            <value>Florida</value>
        </filters>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>contains</operation>
            <value>DMGA</value>
        </filters>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>contains</operation>
            <value>DMAL</value>
        </filters>
        <label>Direct Sales Office Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Latin_America_Puerto_Rico</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>Puerto Rico</value>
        </filters>
        <label>Latin America - Puerto Rico</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Latin_America_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>Latin America</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Latin America Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Latin_America_Users_Cleanup</fullName>
        <columns>Margin_Approver__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>Latin America</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Latin America Users Cleanup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Latin_America_Users_Never_Logged_In</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>Latin America</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessThan</operation>
            <value>2/26/2013 12:00 AM</value>
        </filters>
        <label>Latin America Users - Never Logged In</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MCP_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>MCP</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>MCP Users</label>
    </listViews>
    <listViews>
        <fullName>National_Accounts_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>National Accounts Users</label>
    </listViews>
    <listViews>
        <fullName>Owner_Sales_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>Owner Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Owner Sales Users</label>
    </listViews>
    <listViews>
        <fullName>Service_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>Field Service</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Service Users</label>
    </listViews>
    <listViews>
        <fullName>Service_Users_Inactive</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>Field Service</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Service Users (Inactive)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>System_Administrators</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Service_Region__c</columns>
        <columns>Service_District__c</columns>
        <columns>Sales_Number__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>System Administrators</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Validate_FootPrints_Login</fullName>
        <active>false</active>
        <description>Enable this validation rule to prevent users from editing the BMC Client Management Login ID. However, the users can delete the BMC Client Management Login ID.</description>
        <errorConditionFormula>IF(NOT(ISCHANGED(BMCServiceDesk__FPLoginID__c) ), false, IF(ISBLANK( BMCServiceDesk__FPLoginID__c), false, IF(BMCServiceDesk__FP_Login_Validated__c,false, true)))</errorConditionFormula>
        <errorMessage>You can delete a BMC Client Management Login ID from here but you cannot edit it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exclude_From_Quotas</fullName>
        <active>true</active>
        <description>All Service Sales Rep users and Service Center Managers must be included in the Quota Planning. All other users must be excluded from Quota planning.</description>
        <errorConditionFormula>(Exclude_User_for_Quota_Planning__c = TRUE &amp;&amp;  IsActive &amp;&amp;
((ISPICKVAL(User_Title__c, &quot;Service Sales Rep&quot;)) || (ISPICKVAL(User_Title__c, &quot;Service Sales Tech&quot;)) || 
(ISPICKVAL(User_Title__c, &quot;Account Executive&quot;)) || (ISPICKVAL(User_Title__c, &quot;Service Center Manager&quot;))))

||

(Exclude_User_for_Quota_Planning__c = FALSE &amp;&amp;  IsActive &amp;&amp; (NOT(ISPICKVAL(User_Title__c, &quot;Service Sales Rep&quot;)) &amp;&amp; NOT(ISPICKVAL(User_Title__c, &quot;Business Development Manager&quot;)) &amp;&amp; NOT(ISPICKVAL(User_Title__c, &quot;Account Executive&quot;)) &amp;&amp; NOT(ISPICKVAL(User_Title__c, &quot;Service Sales Tech&quot;)) &amp;&amp; NOT(ISPICKVAL(User_Title__c, &quot;Service Center Manager&quot;))))</errorConditionFormula>
        <errorMessage>All Service Sales Rep users and Service Center Managers must be included in the Quota Planning. All other Users must be excluded from Quota Planning.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_RegionDistrict_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(User_Department__c, &quot;Field Service&quot;) &amp;&amp; (TEXT( Service_Region__c) = &quot;&quot; || TEXT(Service_District__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>You must specify a Service Region and Service District for the user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Title_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Profile.LicenseType , &quot;Salesforce&quot;) &amp;&amp; ISBLANK(Title)</errorConditionFormula>
        <errorMessage>Please specify a Title for the user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Title_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(User_Department__c, &quot;Field Service&quot;) &amp;&amp; (TEXT(User_Title__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>You must specify a User Title.</errorMessage>
    </validationRules>
</CustomObject>